# lectio-recommender

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  seed.py
app/: Dockerfile  crud.py  database.py  main.py  models.py  neo4j_connection.py  recommendations.py  schemas.py
embedding_saver/: Dockerfile  embedding-saver.py
trainer/: Dockerfile  train.py
